# tree-sitter-masm

./: .masm-ls.zon  CMakeLists.txt  Cargo.toml  Makefile  build.zig  build.zig.zon  compilable-test.s  go.mod  grammar.js  listing.txt  mllink$.lnk  package.json  test.s  tree-sitter.json
bindings/c/: tree-sitter-masm.pc.in
bindings/c/tree_sitter/: tree-sitter-masm.h
bindings/go/: binding.go  binding_test.go
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
src/: grammar.json  node-types.json  parser.c
