[package]
name = "tree-sitter-masm"
description = "Microsoft Macro Assembler x86 syntax"
version = "0.1.0"
authors = ["Taylor Plewe <tplewe@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "masm"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/taylorplewe/tree-sitter-masm"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.2"
